--- a/docs/guides/basic-rbac.mdx
+++ b/docs/guides/basic-rbac.mdx
@@ -1,44 +1,44 @@
 ---
-title: Implement basic Role Based Access Control with Metadata
-description: Learn how to leverage Clerk's publicMetadata to implement your own basic Role Based Access Controls
+title: Implement basic Role Based Access Control with metadata
+description: Learn how to leverage Clerk's publicMetadata to implement your own basic Role Based Access Controls.
 ---
 
-# Implement basic Role Based Access Control (RBAC) with Metadata
+# Implement basic Role Based Access Control (RBAC) with metadata 
 
-Clerk provides [User Metadata](/docs/users/metadata#user-metadata), which is a tool that can be leveraged to build flexible custom logic into your application. This guide will cover using Public Metadata to build a based Role Based Access Control (RBAC) system for your application. 
+To control which users can access certain parts of your application, you can leverage Clerk's [roles](/docs/organizations/roles-permissions#roles) feature. Although Clerk offers roles as part of the feature set for [organizations](/docs/organizations/overview), enabling organizations is *not* required to use roles. This guide will cover setting up a basic Role Based Access Control (RBAC) system for products that don't need organizations.
 
-<Callout type="info">
-Clerk offers Roles as part of the feature set for [Organizations](/docs/organizations/overview).  This guide will cover setting up a basic RBAC system for products that don't need Organizations.
-</Callout>
+This guide assumes that you are using Next.js App Router. The concepts here can be adapted to Next.js Pages Router and Remix.
 
-This guide assumes that you are using Next App Router. The concepts here can be adapted to Next Pages Router and Remix.
+## Configure the session token
 
-## Configuring the Session
+Clerk provides [user metadata](/docs/users/metadata#user-metadata), which is a tool that can be leveraged to build flexible custom logic into your application. `unsafeMetadata` can be read and updated in the browser, and as the name states, it is unsafe to store data in. `privateMetadata` can not be read in the browser. `publicMetadata` can be read by the browser and can only be updated server-side or in the Clerk Dashboard, making it the safest and best choice for this use case.
 
-To build basic RBAC, you need to make `publicMetadata` available to applications directly from the token. This will make it more convenient to work with and avoid additional network requests to load the data. `publicMetadata` can be read by the browser and can only be updated server-side or in the Clerk Dashboard. `unsafeMetadata` can be read and updated in the browser, and `privateMetadata` can not be read in the browser. See [User metadata](/docs/users/metadata#user-metadata) for more information.
+To begin building a basic RBAC system, you need to make `publicMetadata` available to applications directly from the session token. This will make the token more convenient to work with and will reduce the need for additional network requests to load the data. 
 
-In the Clerk Dashobard, navigate to the [Sessions](https://dashboard.clerk.com/last-active?path=sessions) section, click 'Edit' and in the modal enter the following JSON. If you have already customized your session token you may need to merge this with what you currently have.
+In the Clerk Dashboard, navigate to [**Sessions**](https://dashboard.clerk.com/last-active?path=sessions). In the **Customize session token** section, select **Edit**. In the modal that opens, enter the following JSON. If you have already customized your session token, you may need to merge this with what you currently have.
 
-```bash
+```json
 {
 	"metadata": "{{user.public_metadata}}"
 }
 ```
 
-The session should look like:
-
-TODO create updated version of public/images/guides/basic-rbac/session-customization.png and add here.
+<Images 
+  width={2494}
+  height={1400}
+  src=""
+  alt="The Sessions page in the Clerk Dashboard with the 'Customize session token' modal opened. The modal has a text field with the JSON 'metadata': '{{user.public_metadata}}'."
+/>
 
 <Callout type="danger">
-The entire token has a limit of 4kb of data. Keep this in mind when customizing the session and add data sparingly.
+  The entire session token has a limit of 4kb of data. Keep this in mind when customizing the session and add data sparingly.
 </Callout>
 
 ## Provide a global TypeScript definition
 
-Inside the `src/` directory, add a `types` directory and then inside of that add a `globals.d.ts` file. This file will prevent TypeScript errors when working with the role, provide auto-complete and control the roles that are allowed in the application. For this guide only an `admin` and `moderator` role will be defined.
+In your application's root folder, add a `types` directory. Inside of the `types` directory, add a `globals.d.ts` file. This file will provide auto-complete, prevent TypeScript errors when working with the role, and control the roles that are allowed in the application. For this guide, only an `admin` and `moderator` role will be defined.
 
-
-```ts filename="src/types/globals.d.ts"
+```ts filename="types/globals.d.ts"
 export { };
 
 declare global {
@@ -50,30 +50,37 @@ declare global {
 }
 ```
 
-## Set a role on your user
+## Set the admin role for your user
 
-Later, you will add a basic admin tool to change the user's role, but for now let's manually add a role to your own user account. In the Dashboard go to Users and select your own user account. Scroll down to the Metadata section and click 'Edit' on the Public metadata. Add the following and save.
+Later, you will add a basic admin tool to change the user's role, but for now, let's manually add a role to your own user account. In the Clerk Dashboard, navigate to [**Users**](https://dashboard.clerk.com/last-active?path=users) and select your own user account. Scroll down to the **Metadata** section and next to the **Public** option, select **Edit**. Add the following JSON and select **Save**.
 
-```bash
+```json
 {
   "role": "admin"
 }
 ```
-The public metadata should look like:
 
-TODO CREATE UPDATED VERSION OF public/images/guides/basic-rbac/user-public-metadata.png and add here.
+<Images 
+  width={2494}
+  height={1400}
+  src=""
+  alt="The Users page in the Clerk Dashboard with the 'Edit public metadata' modal open. The modal has a text field with the JSON 'role': 'admin'."
+/>
 
 ## Create an admin dashboard and protect it
 
-In your application, create a file named `page.tsx` in the `src/app/admin/dashboard` directory. You will likely need to create both the `admin` and `dashboard` directories when doing this. Copy the following code and paste it into the file.
+Now that you have the `admin` role, let's build an admin dashboard to help you easily change users' roles. In your `app/` directory, create an `admin/` folder. Within the `admin/` folder, create a `dashboard/` folder. In the `dashboard/` folder, create a file named `page.tsx`. Copy the following code and paste it into the file.
 
-```tsx filename="src/app/admin/dashboard/page.tsx"
+You want the dashboard to only be available to users with the `admin` role. [As you configured earlier](#configure-the-session-token), a user's role can be found in the metadata stored in the session token. You can access the session token's claims using Clerk's `auth()` hook.
+
+```tsx filename="app/admin/dashboard/page.tsx"
 import { auth } from "@clerk/nextjs";
 import { redirect } from "next/navigation";
 
 export default function AdminDashboard() {
   const { sessionClaims } = auth();
 
+  // If the user does not have the admin role, redirect them to the home page
   if (sessionClaims?.metadata.role !== "admin") {
     redirect("/");
   }
@@ -81,22 +88,23 @@ export default function AdminDashboard() {
   return (
     <>
       <h1>This is the admin dashboard</h1>      
-      <p>This page is restricted to users with the &apos;admin&apos role.</p>
+      <p>This page is restricted to users with the 'admin' role.</p>
     </>
   );
 }
 ```
 
-The `/admin/dashboard` route now requires that the user is logged into the application. It also requires that the user have a publicMetadata of `{"role": "admin" }`
+The `/admin/dashboard` route now requires that the user is logged into the application. It also requires that the user have a `publicMetadata` of `{"role": "admin" }`.
 
-## Create a reusable function
+## Create a reusable function to check roles
 
-Let's create a helper function to make checking roles easier. The first step is modifying `globals.d.ts`. Create a `type` for `Roles` so that union type for the roles can be used in other places in the application, then modify the interface you previously added to use the new `Roles` type.
+Let's create a helper function to make checking roles easier. The first step is modifying `globals.d.ts`. Create a `type` for `Roles` so that the union type for the roles can be used in other places in the application. Then, modify the interface you previously added to use the new `Roles` type.
 
-```ts filename="src/types/globals.d.ts" {3, 8}
+```ts filename="types/globals.d.ts" {3-4, 9}
 export { };
 
-export type Roles = "admin" | "moderator"
+// Create a type for the roles
+export type Roles = "admin" | "moderator";
 
 declare global {
   interface CustomJwtSessionClaims {
@@ -107,26 +115,30 @@ declare global {
 }
 ```
 
-The next step is creating the helper function. Create the `src/utils` directory and inside add the file 'roles.ts'. Add the following code to that file. This function will accept a role using that `Roles` type, and then return `true` if the user has that role and `false` if the user does not.
+The next step is creating the helper function. Create the `utils/` directory and inside, add the file `roles.ts`. In the `roles.ts` file, add the following code.
 
-```ts filename="src/utils/roles.ts"
+```ts filename="utils/roles.ts"
 import { Roles } from "@/types/globals"
 import { auth } from "@clerk/nextjs"
 
 export const checkRole = (role: Roles) => {
   const { sessionClaims } = auth()
-  return sessionClaims?.metadata.role === role
+
+  return sessionClaims?.metadata.role === role;
 }
 ```
 
-The last step to implement the helper function is refactoring the admin dashboard to use it. In the `if()` statement, remove the check that was used previously and repalce it with the new `checkRole()` function and pass that function `"admin"`. 
+This `checkRole()` helper will accept a role using the `Roles` type and will return `true` if the user has that role, or `false` if the user does not.
 
-```tsx filename="src/app/admin/dashboard/page.tsx" {2, 6-8}
+Next, the admin dashboard can be refactored to use the `checkRole()` helper. Navigate back to the admin dashboard file. In the `if()` statement, remove the check that was used previously and replace it with the new `checkRole()` helper with `"admin"` as the argument.
+
+```tsx filename="app/admin/dashboard/page.tsx" {2, 6-9}
 import { redirect } from "next/navigation";
 import { checkRole } from "@/utils/roles";
 
 export default function AdminDashboard() {
 
+  // If the user does not have the admin role, redirect them to the home page
   if (!checkRole("admin")) {
     redirect("/");
   }
@@ -134,32 +146,34 @@ export default function AdminDashboard() {
   return (
     <>
       <h1>This is the admin dashboard</h1>
-      <p>This page is restricted to users with the &apos;admin&apos role.</p>
+      <p>This page is restricted to users with the 'admin' role.</p>
     </>
   );
 }
 ```
 
 <Callout type="info">
-You can modify the behaviour of the helper function to meet your needs. Maybe it will return the roles that the user has, or you could create a `protectByRole()` and have that function handle the redirect.
+  You can modify the behavior of the helper function to meet your needs. Maybe it will return the roles that the user has, or you could create a `protectByRole()` and have that function handle the redirect.
 </Callout>
 
 ## Add admin tools to find users and add roles
 
-You can change roles in the Clerk Dashboard by editing the `publicMetadata` directly. You can also build a UI in your application to do this. You can leverage the `checkRole()` function you added along with server actions to build basic tools to find users and then add roles.
+You can leverage the `checkRole()` function you added along with server actions to build basic tools for finding users and adding roles.
 
-Start with the server action. The `setRole()` action will check the role of the current user using `checkRoles()` to confirm that the user is an `admin`. It will then set the role for the selected user to the specified role.
+Start with the server action. The `setRole()` action below will check the role of the current user using the `checkRoles()` helper to confirm that the user is an `admin`. It will then set the role for the selected user to the specified role.
 
-```ts filename="src/app/admin/dashboard/_actions.ts"
+```ts filename="app/admin/dashboard/_actions.ts"
 "use server";
 
 import { checkRole } from "@/utils/roles";
 import { clerkClient } from "@clerk/nextjs/server";
 
 export async function setRole(formData: FormData) {
+  // Check that the user trying to set the role is an admin
   if (!checkRole("admin")) {
     return { message: "Not Authorized" };
   }
+
   try {
     const res = await clerkClient.users.updateUser(
       formData.get("id") as string,
@@ -174,10 +188,9 @@ export async function setRole(formData: FormData) {
 }
 ```
 
-With the server action in place, you can build the `<SearchUsers />` component. This will have a form that can be used to search for users. On form submission the search term is add to the URL as a serach parameter. The page component, which is a server component that you will refactor next, will perform a query based on this change.
+With the server action in place, you can build the `<SearchUsers />` component. This will have a form that can be used to search for users. On form submission, the search term is added to the URL as a search parameter. The page component, which is a server component that you will refactor next, will perform a query based on this change.
 
-
-```ts filename="src/app/admin/dashboard/_search-users.tsx"
+```ts filename="app/admin/dashboard/_search-users.tsx"
 "use client";
 
 import { usePathname, useRouter } from "next/navigation";
@@ -206,7 +219,7 @@ export const SearchUsers = () => {
 };
 ```
 
-With the server action and the search form in place, you'll refactor the server component for the `src/app/admin/dashboard` route. It will now check if a search paramater has been added to the URL by the search form, and if there is a search parameter present it will search for for users that match the entered term. If an array of one or more users is returned, then the component will render a list of users using their first and last name, primary eamil address, current role and 'Make Admin' and 'Make Moderator' buttons. The buttons include hidden inputs for the user id and the role, and use the `setRole()` server action to update the role for the user.
+With the server action and the search form in place, you'll refactor the server component for the `app/admin/dashboard` route. It will now check if a search paramater has been added to the URL by the search form, and if there is a search parameter present, it will search for users that match the entered term. If an array of one or more users is returned, then the component will render a list of users using their first and last name, primary eamil address, current role and 'Make Admin' and 'Make Moderator' buttons. The buttons include hidden inputs for the user ID and the role, and they use the `setRole()` server action to update the role for the user.
 
 ```ts filename="src/app/admin/dashboard/page.tsx" {3-5, 7-9, 14, 16, 23, 25-55}
 import { redirect } from "next/navigation";
@@ -229,7 +242,7 @@ export default async function AdminDashboard(params: {
   return (
     <>
       <h1>This is the admin dashboard</h1>
-      <p>This page is restricted to users with the &apos;admin&apos; role.</p>
+      <p>This page is restricted to users with the 'admin' role.</p>
 
       <SearchUsers />
 
@@ -269,6 +282,6 @@ export default async function AdminDashboard(params: {
 }
 ```
 
-## Wrap up
+## Finished 🎉
 
-The building blocks needed for a custom RBAC system are in place. Roles are attached directly to the user's session, providing them to your application without needing a separate fetch and network request. The helper function is in place to check the user's role, reducing the code and simplifying the process. The final piece is a component to find users and set their roles.
+The building blocks needed for a custom RBAC system are in place. Roles are attached directly to the user's session, providing them to your application without needing a separate fetch and network request. The helper function is in place to check the user's role, reducing the code and simplifying the process. The final piece is an admin dashboard that allows admin's to find users and set their roles.
