--- a/docs/guides/basic-rbac.mdx
+++ b/docs/guides/basic-rbac.mdx
@@ -160,7 +160,7 @@ export default function AdminDashboard() {
 
 ## Add admin tools to find users and add roles
 
-You can leverage the `checkRole()` function you added along with server actions to build basic tools for finding users and adding roles.
+You can leverage the `checkRole()` function you added along with server actions to build basic tools for finding users and managing roles.
 
 Start with the server action. The `setRole()` action below will check the role of the current user using the `checkRoles()` helper to confirm that the user is an `admin`. It will then set the role for the selected user to the specified role.
 
