--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -1,263 +1,229 @@
 ---
-title: Use Clerk with React
+title: Add authentication and user management to your React app with Clerk
 description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application.
 ---
 
-import {Steps} from "nextra-theme-docs";
-import { Callout } from "nextra-theme-docs";
-import { YouTube } from "@/components/Youtube";
-import { Images } from "@/components/Images";
-import {Cards} from "@/components/Cards";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
-# Use Clerk with React
-
-Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application.
+<TutorialHero 
+  framework="react"
+  exampleRepo={[ 
+    {
+      title: "React Quickstart Repo",
+      link: "https://github.com/clerk/clerk-react-quickstart"
+      
+    }
+  ]}
+  beforeYouStart={[
+    {
+      title: "Set up a Clerk application",
+      link: "https://clerk.com/docs/quickstarts/setup-clerk"
+    }
+  ]}
+>
+- Create a new React application using Vite
+- Install `@clerk/clerk-react`
+- Set up your environment keys
+- Import the Publishable Key
+- Wrap your React app in `<ClerkProvider />`
+- Use Clerk components to protect your content
+- Embed the `<SignInButton />` and `<SignOutButton />`
+- Deploy your application
+</TutorialHero>
 
 <Steps>
 
-### Install `@clerk/clerk-react`
+### Set up a React application using Vite
 
-Once you have a React application ready, you need to install Clerk's React SDK. This gives you access to our prebuilt components and hooks for React applications.
+Scaffold your new React application using [Vite](https://vitejs.dev/guide/#scaffolding-your-first-vite-project).
 
 <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
-  npm install @clerk/clerk-react
+  npm create vite@latest clerk-react -- --template react-ts
+  cd clerk-react
+  npm install
+  npm run dev
   ```
 
+  ```bash filename="terminal"
+  yarn create vite clerk-react--template react-ts
+  cd clerk-react
+  yarn install
+  yarn dev
+  ```
+
+  ```bash filename="terminal"
+  pnpm create vite clerk-react --template react-ts
+  cd clerk-react
+  pnpm install
+  pnpm dev
+  ```
+
+</CodeBlockTabs>
+
+
+### Install `@clerk/clerk-react`
+
+Clerk's React SDK gives you access to prebuilt [components](/docs/components/overview), [hooks](/docs/references/react/use-user), and helpers for React. Install it by running the following command in your terminal:
+
+<CodeBlockTabs type="installer" options={["npm", "yarn",  "pnpm" ]}>
+  ```bash filename="terminal"
+  npm install @clerk/clerk-react
+  ```
   ```bash filename="terminal"
   yarn add @clerk/clerk-react
   ```
-
+  
   ```bash filename="terminal"
   pnpm add @clerk/clerk-react
   ```
+
 </CodeBlockTabs>
 
 ### Set environment keys
 
-Below is an example of an .env file. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
+In your React project's root folder, you may have an `.env` file alongside `package.json` and other configuration files. If you don't see it, create it.
+
+Add the following code to your `.env.local` file to set your public and secret keys.
+
+**Pro tip!** If you are signed into your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys), you can copy your publishable key below.
 
 <InjectKeys>
 
 ```sh filename=".env"
-REACT_APP_CLERK_PUBLISHABLE_KEY={{pub_key}}
+VITE_CLERK_PUBLISHABLE_KEY={{pub_key}}
 ```
 
 </InjectKeys>
 
-### Configure `<ClerkProvider>`
+### Import the Publishable Key
 
-Clerk requires your React application to be wrapped in the [`<ClerkProvider>`](/docs/components/clerk-provider) component. The `<ClerkProvider>` component provides active session and user context to Clerk's hooks and other components.
+You will need to import your Publishable Key into your application. You can add an `if` statement to check that it is imported and that it exists. This will prevent running the application without the Publishable Key, and will also prevent TypeScript errors.
 
-```tsx filename="app.tsx"
-import React from "react";
-import "./App.css";
-import { ClerkProvider } from "@clerk/clerk-react";
+```tsx filename="src/main.tsx" {6-7, 9-11}
+import React from 'react'
+import ReactDOM from 'react-dom/client'
+import App from './App.tsx'
+import './index.css'
 
-if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw new Error("Missing Publishable Key")
-}
-const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
+// Import your publishable key
+const PUBLISHABLE_KEY = import.meta.env.VITE_CLERK_PUBLISHABLE_KEY
 
-function App() {
-  return (
-    <ClerkProvider publishableKey={clerkPubKey}>
-      <div>Hello from clerk</div>
-    </ClerkProvider>
-  );
-}
-
-export default App;
-```
-
-### Protecting your pages
-
-Clerk offers [Control Components](/docs/components/overview) that allow you to protect your pages. These components are used to control the visibility of your pages based on the user's authentication state.
-
-```tsx filename="app.tsx"
-import React from "react";
-import "./App.css";
-import {
-  ClerkProvider,
-  SignedIn,
-  SignedOut,
-  UserButton,
-  useUser,
-  RedirectToSignIn,
-} from "@clerk/clerk-react";
-
-if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw "Missing Publishable Key"
-}
-
-const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-
-function App() {
-  return (
-    <ClerkProvider publishableKey={clerkPubKey}>
-      <SignedIn>
-        <Welcome />
-      </SignedIn>
-      <SignedOut>
-        <RedirectToSignIn />
-      </SignedOut>
-    </ClerkProvider>
-  );
-}
-
-function Welcome() {
-  return <div>Hello you are signed in</div>;
-}
-
-export default App;
-```
-
-<Callout type="info" emoji="🎉">
- At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of box.
-Start your React application via `npm run start`, visit `http://localhost:3000`, and sign up to get access to your application.
-</Callout>
-
-
-#### Using a routing library with Clerk
-
-Clerk can work with any routing library. Below is an example of how to use Clerk with React Router and how to embed the Clerk components in your application.
-
-```tsx filename="app.tsx"
-import {
-  ClerkProvider,
-  SignedIn,
-  SignedOut,
-  RedirectToSignIn,
-  SignIn,
-  SignUp,
-  UserButton,
-} from "@clerk/clerk-react";
-import { BrowserRouter, Route, Routes, useNavigate } from "react-router-dom";
-
-if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
+if (!PUBLISHABLE_KEY) {
   throw new Error("Missing Publishable Key")
 }
 
-const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-
-function PublicPage() {
-  return (
-    <>
-      <h1>Public page</h1>
-      <a href="/protected">Go to protected page</a>
-    </>
-  );
-}
-
-function ProtectedPage() {
-  return (
-    <>
-      <h1>Protected page</h1>
-      <UserButton />
-    </>
-  );
-}
-
-function ClerkProviderWithRoutes() {
-  const navigate = useNavigate();
-
-  return (
-    <ClerkProvider
-      publishableKey={clerkPubKey}
-      navigate={(to) => navigate(to)}
-    >
-      <Routes>
-        <Route path="/" element={<PublicPage />} />
-        <Route
-          path="/sign-in/*"
-          element={<SignIn routing="path" path="/sign-in" />}
-        />
-        <Route
-          path="/sign-up/*"
-          element={<SignUp routing="path" path="/sign-up" />}
-        />
-        <Route
-          path="/protected"
-          element={
-          <>
-            <SignedIn>
-              <ProtectedPage />
-            </SignedIn>
-            <SignedOut>
-              <RedirectToSignIn />
-            </SignedOut>
-          </>
-          }
-        />
-      </Routes>
-    </ClerkProvider>
-  );
-}
-
-function App() {
-  return (
-    <BrowserRouter>
-      <ClerkProviderWithRoutes />
-    </BrowserRouter>
-  );
-}
-
-export default App;
+ReactDOM.createRoot(document.getElementById('root')!).render(
+  <React.StrictMode>
+      <App />
+  </React.StrictMode>,
+)
 ```
 
-### Read session and user data
 
-Clerk provides a set of [hooks and helpers](/docs/references/react/use-user) that you can use to access the active session and user data in your React application. Here are examples of how to use these helpers.
+### Wrap your app in `<ClerkProvider />`
 
-#### `useAuth`
+The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/clerk-react'` at the top of your `/src/main.tsx` file. 
+```tsx filename="src/main.tsx" {5, 16, 18}
+import React from 'react'
+import ReactDOM from 'react-dom/client'
+import App from './App.tsx'
+import './index.css'
+import { ClerkProvider } from '@clerk/clerk-react'
 
-The [`useAuth`](/docs/references/react/use-auth) hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
+// Import your publishable key
+const PUBLISHABLE_KEY = import.meta.env.VITE_CLERK_PUBLISHABLE_KEY
 
-```tsx filename="pages/example.tsx"
-import { useAuth } from "@clerk/clerk-react";
+if (!PUBLISHABLE_KEY) {
+  throw new Error("Missing Publishable Key")
+}
 
-export default function Example() {
-  const { isLoaded, userId, sessionId, getToken } = useAuth();
+ReactDOM.createRoot(document.getElementById('root')!).render(
+  <React.StrictMode>
+    <ClerkProvider publishableKey={PUBLISHABLE_KEY}>
+      <App />
+    </ClerkProvider>
+  </React.StrictMode>,
+)
+```
 
-  // In case the user signs out while on the page.
-  if (!isLoaded || !userId) {
-    return null;
-  }
+### Use Clerk components to protect your content
+
+Clerk offers a set of [prebuilt components](/docs/components/overview) that can gate access to content based on whether a user is signed in and has the correct permissions. You can use Clerk's [`<SignedIn>`](/docs/components/control/signed-in) and [`<SignedOut>`](/docs/components/control/signed-out) components to restrict access to content and even whole pages. The `<SignedIn>` component requires the user be signed in to view the content inside the tags. The `<SignedOut>` components requires the user to be signed out.
+
+```tsx filename="src/App.tsx" {1, 7-12}
+import { SignedOut, SignedIn } from "@clerk/clerk-react"
+
+function App() {
 
   return (
     <div>
-      Hello, {userId} your current active session is {sessionId}
+      <SignedOut>
+        <p>This content is public. Only signed out users can see this.</p>
+      </SignedOut>
+      <SignedIn>
+        <p>This content is private. Only signed in users can see this.</p>
+      </SignedIn>
     </div>
-  );
+  )
 }
+
+export default App
 ```
 
-#### `useUser`
+Start your React application via `npm run dev` and visit [`http://localhost:5173`](http://localhost:5173) to see what signed out users will see. Next you will add a button so you can sign in.
 
-The [`useUser`](/docs/references/react/use-user) hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
+### Embed the `<SignInButton />` and `<SignOutButton />`
 
-```tsx filename="pages/example.tsx"
-import { useUser } from "@clerk/clerk-react";
+The [`<SignInButton />`](/docs/components/unstyled/sign-in-button) and [`<SignOutButton />`](/docs/components/unstyled/sign-out-button) are components that you can use to either create a basic button or to wrap around your styled button and turn it into a sign-in or sign-out button.
 
-export default function Example() {
-  const { isLoaded, isSignedIn, user } = useUser();
+Add a `<SignInButton />` inside the content wrapped by `<SignedOut>` so people have an option to sign in. And add a `<SignOutButton />` inside the content wrapped by `<SignedIn>` to let users who are signed in sign out. 
 
-  if (!isLoaded || !isSignedIn) {
-    return null;
-  }
+Notice the `afterSignOutUrl` prop being passed to `<SignOutButton />`. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out. In this example, the user is redirected to the homepage (`/`) of the application.
 
-  return <div>Hello, {user.firstName} welcome to Clerk</div>;
+```tsx filename="src/App.tsx" {1, 8, 12}
+import { SignOutButton, SignInButton, SignedIn, SignedOut } from "@clerk/clerk-react"
+
+function App() {
+
+  return (
+    <div>
+      <SignedOut>
+        <SignInButton />
+        <p>This content is public. Only signed out users can see the SignInButton above this text.</p>
+      </SignedOut>
+      <SignedIn>
+        <SignOutButton afterSignOutUrl="/" />
+        <p>This content is private. Only signed in users can see the SignOutButton above this text.</p>
+      </SignedIn>
+    </div>
+  )
 }
+
+export default App
 ```
+
+Visit [`http://localhost:5173`](http://localhost:5173) and try signing in to see the protected content and signing out to see the protected and unprotected content.
+
+### Deploy your application
+
+You're ready to [deploy your app to production](/docs/deployments/overview) and welcome new users!
 </Steps>
 
-### Next steps
+## You're authenticated!
 
-Now that you have an application integrated with Clerk, you will want to read the following documentation:
+Congratulations! Your app is now using Clerk to authenticate users. But this is just the first step. If you would like to clone or investigate this application, please check out:
+
+* [Clerk + React Quickstart](https://github.com/clerk/clerk-react-quickstart)
+
+## Next step: Add routing with React Router
+
+React has many options for handling routing, and you are free to choose the option that suits you best. If you would like to learn how to integrate React Router's latest Data API-based router (nicknamed Data Router), please see the [Add React Router to your Clerk Powered application](/docs/references/react/add-react-router) guide. 
+
+You can also learn more about Clerk components, how to customize them, and how to use Clerk's client side helpers. The following guides are good places to start.
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <Cards title="Add React Router" description="Learn how to add routing to your app with React Router." link="/docs/references/react/add-react-router" cta="Learn More" />
+
     <Cards title="Customization & Localization" description="Learn how to customize and localize the Clerk components." link="/docs/components/customization/overview" cta="Learn More" />
 
     <Cards title="Authentication Components" description="Learn more about all our authentication components." link="/docs/components/authentication/sign-in" cta="Learn More" />
