--- a/docs/deployments/environments.mdx
+++ b/docs/deployments/environments.mdx
@@ -17,6 +17,7 @@ Some notable examples of `Development`-only characteristics are:
 - [The Account Portal](/docs/account-portal/overview) will use a Clerk development domain that ends with `accounts.dev` instead of your app's production domain
 - OAuth consent screens will show the development domain that ends with `accounts.dev` instead of your production domain
 - Search engines will not be able to crawl and index your application
+- Development instances have a 500 users cap and user data can not be transferred between instances
 
 > **Note:** All paid functionality is available in a `Development` instance. However, when you deploy your application to `Production` you will be asked to upgrade to a `Pro` account. See [our pricing page](/pricing) for full details.
 
