apply code review suggestion

--- a/docs/guides/basic-rbac.mdx
+++ b/docs/guides/basic-rbac.mdx
@@ -5,7 +5,7 @@ description: Learn how to leverage Clerk's publicMetadata to implement your own 
 
 # Implement basic Role Based Access Control (RBAC) with metadata 
 
-To control which users can access certain parts of your application, you can leverage Clerk's [roles](/docs/organizations/roles-permissions#roles) feature. Although Clerk offers roles as part of the feature set for [organizations](/docs/organizations/overview), enabling organizations is *not* required to use roles. This guide will cover setting up a basic Role Based Access Control (RBAC) system for products that don't need organizations.
+To control which users can access certain parts of your application, you can leverage Clerk's [roles](/docs/organizations/roles-permissions#roles) feature. Although Clerk offers a roles feature as part of the feature set for [organizations](/docs/organizations/overview), not every app implements organizations. This guide will cover a workaround for setting up a basic Role Based Access Control (RBAC) system for products that don't use Clerk's organizations or roles. 
 
 This guide assumes that you are using Next.js App Router. The concepts here can be adapted to Next.js Pages Router and Remix.
 
@@ -15,7 +15,7 @@ Clerk provides [user metadata](/docs/users/metadata#user-metadata), which is a t
 
 `unsafeMetadata` can be read and updated in the browser, and as the name states, it is unsafe to store data in. `privateMetadata` can not be read in the browser. `publicMetadata` can be read by the browser and can only be updated server-side or in the Clerk Dashboard, making it the safest and best choice for this use case.
 
-To begin building a basic RBAC system, you need to make `publicMetadata` available to applications directly from the session token. This will make the token more convenient to work with and will reduce the need for additional network requests to load the data. 
+To build a basic RBAC system, first you need to make `publicMetadata` available to the application directly from the session token. With `publicMetadata` attached directly to the user's session, a fetch and network request isn't required every time you need to access the data.
 
 In the Clerk Dashboard, navigate to [**Sessions**](https://dashboard.clerk.com/last-active?path=sessions). In the **Customize session token** section, select **Edit**. In the modal that opens, enter the following JSON. If you have already customized your session token, you may need to merge this with what you currently have.
 
