--- a/docs/guides/basic-rbac.mdx
+++ b/docs/guides/basic-rbac.mdx
@@ -28,7 +28,7 @@ In the Clerk Dashboard, navigate to [**Sessions**](https://dashboard.clerk.com/l
 <Images 
   width={2494}
   height={1400}
-  src=""
+  src="/docs/images/guides/basic-rbac/customize-session-token.webp"
   alt="The Sessions page in the Clerk Dashboard with the 'Customize session token' modal opened. The modal has a text field with the JSON 'metadata': '{{user.public_metadata}}'."
 />
 
@@ -65,7 +65,7 @@ Later, you will add a basic admin tool to change the user's role, but for now, l
 <Images 
   width={2494}
   height={1400}
-  src=""
+  src="/docs/images/guides/basic-rbac/edit-public-metadata.webp"
   alt="The Users page in the Clerk Dashboard with the 'Edit public metadata' modal open. The modal has a text field with the JSON 'role': 'admin'."
 />
 
